feat(simulation): add obstacle system with mobile support
- Implement obstacle entities with collision and repulsion mechanics
- Add mobile-responsive UI with action bar for obstacle interaction
- Extend agent behaviors to interact with obstacles (immortality, growth boost)
- Update documentation and config for obstacle parameters
- Improve mobile layout and touch controls

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <script src="js/Config.js"></script>
     <script src="js/SoundManager.js"></script>
     <script src="js/Agent.js"></script>
+    <script src="js/Obstacle.js"></script>
     <script src="js/Prey.js"></script>
     <script src="js/Predator.js"></script>
     <script src="js/UIManager.js"></script>
